Aqua infra reorganize structure (#5)
* Update AVW_all_regression_800.txt

* AquaINFRA function

* Update run_AquaINFRA.py

* Update run_AquaINFRA.py

* Update OWT.py

* Update run_AquaINFRA.py

* csv read bug fixed

* AquaINFRA - find scene dirname via xfdumainifest file

* Added pygeoapi / OGC API process files (AquaINFRA project) (#4)

* First functioning version, 2024-09-12.

* Imports now direct or from pygeoapi environment, via catching ModuleNotFound.

* Paths now read from config, not hardcoded.

* Another path read from config, if not found right away.

* Checking sensor against list of supported sensors.

* Inputs are now read from URL. But you can use the three examples directly on server.

* Read output title and description from process metadata, improve process metadata.

* Process description to JSON.

* Added use case name to pygeoapi process description.

* Moved pygeoapi-related code into subdirectory.

* Updated curl examples.

* Added README to pygeoapi subdir.

---------

Co-authored-by: Shun Bi <bishun1994@foxmail.com>

* v0.50 reorganize structure

    - Reorganize the structure for tidiness
    - Add `projects` folder to contain scripts for different application.
    - `projects` now has two folders, AquaINFRA for scripts related to the project, and zenodo for its data preparation
    - Merge Merret's PR for AquaINFRA project which employs pygeoapi module for cloud processing
    - Collect pyowt-related scripts to `pyowt` for better management.
    - Have a `setup.py` for development install mode, `pip install -e .`

* Update setup.py

* sensor name updates

- sensor names updates with the corresponding structure, sensor-platform
- pyowt/reader for reading different input files (on hold for next version)
- add pyOWT aquaINFRA webtool description docx

* v0.60

    - Add a new version of classification centroids which has been shrinked with smaller covariance
    - Since differen

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,18 @@ archive/
 test_running/
 data/GermanBight_20160720T093421_subset.nc
 type_owt.png
+test_martin_issued_bug.py
+projects/zenodo/owt_BH2024_training_data_olci.nc
+projects/zenodo/owt_BH2024_training_data_hyper.nc
+projects/zenodo/reshape_netcdf_temp_data/single_variable.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_ad.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_agp.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_aph.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_aw.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_bbp.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_bp.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_bw.csv
+projects/zenodo/reshape_netcdf_temp_data/spec_Rrs.csv
+
+# liu's mission on hold
+projects/Liu/*
