--- a/pyowt/data/sensor_band_library.yaml
+++ b/pyowt/data/sensor_band_library.yaml
@@ -57,12 +57,7 @@ lib_800:
     - 709
     - 779
     - 866
-    CZCS_NIMBUS7:
-    - 443
-    - 520
-    - 550
-    - 670
-    GOCI_COMS:
+    GOCI-coms:
     - 412
     - 443
     - 490
@@ -71,7 +66,7 @@ lib_800:
     - 680
     - 745
     - 865
-    HAWKEYE_SEAHAWK1:
+    HAWKEYE-seahawk1:
     - 412
     - 447
     - 488
@@ -80,7 +75,74 @@ lib_800:
     - 670
     - 752
     - 867
-    MERIS_ENVISAT:
+    HSI-EnMAP:
+    - 420.9
+    - 426.5
+    - 431.8
+    - 437.0
+    - 442.0
+    - 446.9
+    - 451.7
+    - 456.4
+    - 461.2
+    - 465.9
+    - 470.5
+    - 475.2
+    - 479.9
+    - 484.5
+    - 489.2
+    - 493.9
+    - 498.6
+    - 503.4
+    - 508.2
+    - 513.0
+    - 517.9
+    - 522.8
+    - 527.7
+    - 532.7
+    - 537.7
+    - 542.8
+    - 547.9
+    - 553.0
+    - 558.2
+    - 563.5
+    - 568.8
+    - 574.2
+    - 579.6
+    - 585.1
+    - 590.7
+    - 596.3
+    - 602.0
+    - 607.8
+    - 613.7
+    - 619.6
+    - 625.7
+    - 631.8
+    - 637.9
+    - 644.1
+    - 650.4
+    - 656.7
+    - 663.1
+    - 669.6
+    - 676.1
+    - 682.7
+    - 689.3
+    - 696.1
+    - 702.9
+    - 709.7
+    - 716.7
+    - 723.7
+    - 730.7
+    - 737.9
+    - 745.1
+    - 752.3
+    - 759.6
+    - 767.0
+    - 774.4
+    - 781.9
+    - 789.5
+    - 797.0
+    MERIS-envisat:
     - 413
     - 443
     - 490
@@ -93,7 +155,238 @@ lib_800:
     - 754
     - 779
     - 865
-    MODIS_Aqua:
+    OCI-PACE:
+    - 400.2
+    - 402.7
+    - 405.1
+    - 407.6
+    - 410.1
+    - 412.6
+    - 415.0
+    - 417.5
+    - 420.0
+    - 422.5
+    - 424.9
+    - 427.4
+    - 429.9
+    - 432.4
+    - 434.9
+    - 437.4
+    - 439.8
+    - 442.3
+    - 444.8
+    - 447.3
+    - 449.8
+    - 452.3
+    - 454.8
+    - 457.3
+    - 459.8
+    - 462.2
+    - 464.7
+    - 467.2
+    - 469.7
+    - 472.2
+    - 474.7
+    - 477.2
+    - 479.7
+    - 482.2
+    - 484.7
+    - 487.2
+    - 489.7
+    - 492.2
+    - 494.7
+    - 497.2
+    - 499.7
+    - 502.2
+    - 504.7
+    - 507.2
+    - 509.7
+    - 512.2
+    - 514.7
+    - 517.2
+    - 519.7
+    - 522.2
+    - 524.8
+    - 527.3
+    - 529.8
+    - 532.3
+    - 534.9
+    - 537.3
+    - 539.9
+    - 542.4
+    - 544.9
+    - 547.4
+    - 550.0
+    - 552.5
+    - 555.0
+    - 557.6
+    - 560.1
+    - 562.6
+    - 565.2
+    - 567.7
+    - 570.3
+    - 572.8
+    - 575.3
+    - 577.9
+    - 580.5
+    - 583.0
+    - 585.6
+    - 588.1
+    - 590.5
+    - 593.1
+    - 595.7
+    - 598.3
+    - 600.9
+    - 603.3
+    - 605.5
+    - 600.5
+    - 602.9
+    - 605.5
+    - 608.0
+    - 610.4
+    - 612.7
+    - 615.1
+    - 617.6
+    - 620.1
+    - 622.5
+    - 625.0
+    - 627.4
+    - 629.9
+    - 632.4
+    - 634.8
+    - 637.3
+    - 639.8
+    - 641.0
+    - 642.3
+    - 643.5
+    - 644.7
+    - 646.0
+    - 647.2
+    - 648.4
+    - 649.7
+    - 650.9
+    - 652.2
+    - 653.4
+    - 654.6
+    - 655.9
+    - 657.1
+    - 658.3
+    - 659.6
+    - 660.8
+    - 662.1
+    - 663.3
+    - 664.6
+    - 665.8
+    - 667.0
+    - 668.3
+    - 669.5
+    - 670.8
+    - 672.0
+    - 673.2
+    - 674.5
+    - 675.7
+    - 677.0
+    - 678.2
+    - 679.4
+    - 680.7
+    - 681.9
+    - 683.2
+    - 684.4
+    - 685.7
+    - 686.9
+    - 688.1
+    - 689.4
+    - 690.7
+    - 691.9
+    - 693.1
+    - 694.4
+    - 695.6
+    - 696.9
+    - 698.1
+    - 699.4
+    - 700.6
+    - 701.9
+    - 703.1
+    - 704.4
+    - 705.6
+    - 706.8
+    - 708.1
+    - 709.3
+    - 710.6
+    - 711.8
+    - 713.1
+    - 714.3
+    - 716.8
+    - 719.3
+    - 721.8
+    - 724.3
+    - 726.8
+    - 729.3
+    - 731.8
+    - 734.3
+    - 736.8
+    - 739.3
+    - 740.5
+    - 741.8
+    - 743.0
+    - 744.3
+    - 745.5
+    - 746.8
+    - 748.0
+    - 749.3
+    - 750.5
+    - 751.8
+    - 753.0
+    - 754.3
+    - 755.5
+    - 756.8
+    - 758.1
+    - 759.3
+    - 760.6
+    - 761.8
+    - 763.1
+    - 764.3
+    - 765.6
+    - 766.8
+    - 768.1
+    - 769.3
+    - 770.6
+    - 771.8
+    - 773.1
+    - 774.3
+    - 776.8
+    - 779.3
+    - 781.8
+    - 784.4
+    - 786.9
+    - 789.4
+    - 791.9
+    - 794.4
+    - 796.9
+    - 799.4
+    OCTS-adeos:
+    - 412
+    - 443
+    - 490
+    - 516
+    - 565
+    - 667
+    - 862
+    OLI-landsat-8:
+    - 443
+    - 482
+    - 561
+    - 655
+    - 865
+    SeaWiFS-orbview-2:
+    - 412
+    - 443
+    - 490
+    - 510
+    - 555
+    - 670
+    - 865
+    modis-aqua:
     - 412
     - 443
     - 469
@@ -106,7 +399,7 @@ lib_800:
     - 678
     - 748
     - 859
-    MODIS_Terra:
+    modis-terra:
     - 412
     - 443
     - 469
@@ -119,7 +412,7 @@ lib_800:
     - 678
     - 748
     - 859
-    MSI_S2A:
+    msi-sentinel-2a:
     - 443
     - 492
     - 560
@@ -128,7 +421,8 @@ lib_800:
     - 740
     - 783
     - 835
-    MSI_S2B:
+    - 865
+    msi-sentinel-2b:
     - 442
     - 492
     - 559
@@ -137,15 +431,8 @@ lib_800:
     - 739
     - 780
     - 835
-    OCTS_ADEOS:
-    - 412
-    - 443
-    - 490
-    - 516
-    - 565
-    - 667
-    - 862
-    OLCI_S3A:
+    - 864
+    olci-s3a:
     - 400
     - 412
     - 443
@@ -160,7 +447,7 @@ lib_800:
     - 754
     - 779
     - 866
-    OLCI_S3B:
+    olci-s3b:
     - 400
     - 412
     - 443
@@ -175,21 +462,7 @@ lib_800:
     - 754
     - 779
     - 866
-    OLI_LC8:
-    - 443
-    - 482
-    - 561
-    - 655
-    - 865
-    SEAWIFS_ORBVIEW2:
-    - 412
-    - 443
-    - 490
-    - 510
-    - 555
-    - 670
-    - 865
-    VIIRS_JPSS1:
+    viirs-jpss-1:
     - 411
     - 445
     - 489
@@ -197,7 +470,7 @@ lib_800:
     - 667
     - 746
     - 868
-    VIIRS_JPSS2:
+    viirs-jpss-2:
     - 411
     - 445
     - 488
@@ -205,7 +478,7 @@ lib_800:
     - 671
     - 747
     - 868
-    VIIRS_SNPP:
+    viirs-suomi-npp:
     - 410
     - 443
     - 486
@@ -234,67 +507,71 @@ lib_800:
     - 443
     - 560
     - 665
-    CZCS_NIMBUS7:
-    - 443
-    - 550
-    - 670
-    GOCI_COMS:
+    GOCI-coms:
     - 443
     - 555
     - 660
-    HAWKEYE_SEAHAWK1:
+    HAWKEYE-seahawk1:
     - 447
     - 556
     - 670
-    MERIS_ENVISAT:
+    HSI-EnMAP:
+    - 442.0
+    - 558.2
+    - 663.1
+    MERIS-envisat:
     - 443
     - 560
     - 665
-    MODIS_Aqua:
-    - 443
-    - 555
-    - 667
-    MODIS_Terra:
-    - 443
-    - 555
-    - 667
-    MSI_S2A:
-    - 443
-    - 560
-    - 665
-    MSI_S2B:
-    - 442
-    - 559
-    - 665
-    OCTS_ADEOS:
+    OCI-PACE:
+    - 442.3
+    - 560.1
+    - 664.6
+    OCTS-adeos:
     - 443
     - 565
     - 667
-    OLCI_S3A:
-    - 443
-    - 560
-    - 665
-    OLCI_S3B:
-    - 443
-    - 560
-    - 665
-    OLI_LC8:
+    OLI-landsat-8:
     - 443
     - 561
     - 655
-    SEAWIFS_ORBVIEW2:
+    SeaWiFS-orbview-2:
     - 443
     - 555
     - 670
-    VIIRS_JPSS1:
+    modis-aqua:
+    - 443
+    - 555
+    - 667
+    modis-terra:
+    - 443
+    - 555
+    - 667
+    msi-sentinel-2a:
+    - 443
+    - 560
+    - 665
+    msi-sentinel-2b:
+    - 442
+    - 559
+    - 665
+    olci-s3a:
+    - 443
+    - 560
+    - 665
+    olci-s3b:
+    - 443
+    - 560
+    - 665
+    viirs-jpss-1:
     - 445
     - 556
     - 667
-    VIIRS_JPSS2:
+    viirs-jpss-2:
     - 445
     - 555
     - 671
-    VIIRS_SNPP:
+    viirs-suomi-npp:
     - 443
     - 551
     - 671
@@ -314,51 +591,54 @@ lib_800:
     CMEMS_MED_MYINT:
       max: 866
       min: 400
-    CZCS_NIMBUS7:
-      max: 670
-      min: 443
-    GOCI_COMS:
+    GOCI-coms:
       max: 865
       min: 412
-    HAWKEYE_SEAHAWK1:
+    HAWKEYE-seahawk1:
       max: 867
       min: 412
-    MERIS_ENVISAT:
+    HSI-EnMAP:
+      max: 797.0
+      min: 420.9
+    MERIS-envisat:
       max: 865
       min: 413
-    MODIS_Aqua:
-      max: 667
-      min: 412
-    MODIS_Terra:
-      max: 667
-      min: 412
-    MSI_S2A:
-      max: 835
-      min: 443
-    MSI_S2B:
-      max: 835
-      min: 442
-    OCTS_ADEOS:
+    OCI-PACE:
+      max: 799.4
+      min: 400.2
+    OCTS-adeos:
       max: 862
       min: 412
-    OLCI_S3A:
-      max: 866
-      min: 400
-    OLCI_S3B:
-      max: 866
-      min: 400
-    OLI_LC8:
+    OLI-landsat-8:
       max: 865
       min: 443
-    SEAWIFS_ORBVIEW2:
+    SeaWiFS-orbview-2:
       max: 865
       min: 412
-    VIIRS_JPSS1:
+    modis-aqua:
+      max: 859
+      min: 412
+    modis-terra:
+      max: 859
+      min: 412
+    msi-sentinel-2a:
+      max: 865
+      min: 443
+    msi-sentinel-2b:
+      max: 864
+      min: 442
+    olci-s3a:
+      max: 866
+      min: 400
+    olci-s3b:
+      max: 866
+      min: 400
+    viirs-jpss-1:
       max: 868
       min: 411
-    VIIRS_JPSS2:
+    viirs-jpss-2:
       max: 868
       min: 411
-    VIIRS_SNPP:
+    viirs-suomi-npp:
       max: 862
       min: 410
