--- a/pyowt/data/sensor_band_library.yaml
+++ b/pyowt/data/sensor_band_library.yaml
@@ -399,6 +399,16 @@ lib_800:
     - 678
     - 748
     - 859
+    modis-gee:
+    - 412
+    - 443
+    - 488
+    - 531
+    - 555
+    - 667
+    - 678
+    - 748
+    - 859
     modis-terra:
     - 412
     - 443
@@ -420,7 +430,6 @@ lib_800:
     - 704
     - 740
     - 783
-    - 835
     - 865
     msi-sentinel-2b:
     - 442
@@ -430,7 +439,6 @@ lib_800:
     - 704
     - 739
     - 780
-    - 835
     - 864
     olci-s3a:
     - 400
@@ -543,6 +551,10 @@ lib_800:
     - 443
     - 555
     - 667
+    modis-gee:
+    - 443
+    - 555
+    - 667
     modis-terra:
     - 443
     - 555
@@ -616,6 +628,9 @@ lib_800:
       max: 865
       min: 412
     modis-aqua:
+      max: 859
+      min: 412
+    modis-gee:
       max: 859
       min: 412
     modis-terra:
