--- a/pyowt/data/sensor_band_library.yaml
+++ b/pyowt/data/sensor_band_library.yaml
@@ -142,6 +142,53 @@ lib_800:
     - 781.9
     - 789.5
     - 797.0
+    HSI-PRISMA:
+    - 407.0
+    - 415.8
+    - 423.8
+    - 431.3
+    - 438.7
+    - 446.0
+    - 453.4
+    - 460.7
+    - 468.1
+    - 475.3
+    - 482.5
+    - 489.8
+    - 497.1
+    - 504.5
+    - 512.0
+    - 519.5
+    - 527.3
+    - 535.1
+    - 542.9
+    - 550.9
+    - 559.0
+    - 567.2
+    - 575.5
+    - 583.8
+    - 592.3
+    - 601.0
+    - 610.0
+    - 618.7
+    - 627.8
+    - 636.7
+    - 646.0
+    - 655.4
+    - 664.9
+    - 674.5
+    - 684.1
+    - 694.1
+    - 703.7
+    - 713.7
+    - 723.9
+    - 734.0
+    - 744.1
+    - 754.5
+    - 764.9
+    - 775.3
+    - 785.7
+    - 796.1
     LakeCCI-MERIS:
     - 413
     - 443
@@ -540,6 +587,10 @@ lib_800:
     - 442.0
     - 558.2
     - 663.1
+    HSI-PRISMA:
+    - 446.0
+    - 559.0
+    - 664.9
     LakeCCI-MERIS:
     - 443
     - 560
@@ -629,6 +680,9 @@ lib_800:
     HSI-EnMAP:
       max: 797.0
       min: 420.9
+    HSI-PRISMA:
+      max: 796.1
+      min: 407.0
     LakeCCI-MERIS:
       max: 885
       min: 413
